# NexgenRedux

./: .gitignore  CMakeLists.txt  NexgenRedux-360.sln  NexgenRedux-OG.sln  NexgenRedux-PC.code-workspace  NexgenRedux-UWP.sln  README.md
.github/workflows/: cmake.yml
Artwork/: Icon.icns
Libraries/AngelScript/: as_callfunc_xenon.cpp  as_context.cpp
Libraries/AngelScript/addons/scriptarray/: scriptarray.cpp
Libraries/AngelScript/addons/scriptbuilder/: scriptbuilder.cpp
Libraries/AngelScript/addons/scriptdictionary/: scriptdictionary.h
Libraries/AngelScript/addons/scripthelper/: scripthelper.cpp
Libraries/Angle/Lib/Win/: libGLESv2.lib
Libraries/CglTF/: cgltf.h
Libraries/DocGen/: docgen.cpp
Libraries/GLAD/Includes/GLAD/: glad.h
Libraries/GLAD/Source/: glad.c
Libraries/Gensys/: Crc32.cpp  Crc32.h  DebugUtility.cpp  DebugUtility.h  Drive.cpp  Drive.h  DriveManager.cpp  DriveManager.h  EndianHelper.h  FileSystem.cpp  FileSystem.h  FtpServer.cpp  FtpServer.h  Int.h  Memory.cpp  Memory.h  NetworkManager.cpp  NetworkManager.h  SocketUtility.cpp  SocketUtility.h  SocketUtilityOld.cpp  SocketUtilityOld.h  StringUtility.cpp  StringUtility.h  Test.cpp  Test.h  TimeUtility.cpp  TimeUtility.h  TreeNode.cpp  TreeNode.h  UniqueIdGenerator.cpp  UniqueIdGenerator.h  VirtualFileSystem.cpp  VirtualFileSystem.h  XboxInternals.h
Libraries/SSFN/: ssfn.h
Libraries/TinyDir/: tinydir.h
Linux/: CMakeLists.txt  main.cpp
Mac/: .gitignore  CMakeLists.txt  Icon.h  main.cpp
NexgenRedux/: Icon.h
NexgenRedux-360/: NexgenRedux-360.vcxproj  NexgenRedux-360.vcxproj.filters  main.cpp
NexgenRedux-OG/: .gitignore  BootLoader.cpp  BootLoader.h  NexgenRedux-OG.vcproj  main.cpp
NexgenRedux-PC/: main.cpp
NexgenRedux-Shared/: AngelScriptDebugHost.cpp  AngelScriptDebugHost.h  AngelScriptDebugger.cpp  AngelScriptDebugger.h  AngelScriptDebuggerCore.cpp  AngelScriptDebuggerCore.h  AngelScriptMethods.cpp  AngelScriptMethods.h  AngelScriptRunner.cpp  AngelScriptRunner.h  AudioManager.cpp  AudioManager.h  BootLoader.cpp  ConfigLoader.cpp  ConfigLoader.h  Constants.h  ECSManager.cpp  ECSManager.h  GlobalTypes.h  IRenderingHelper.h  IWindowHelper.h  Icon.cpp  Icon.h  JoystickManager.cpp  JoystickManager.h  MathHelper.h  MathUtility.cpp  MathUtility.h  MeshUtility.cpp  MeshUtility.h  OpenGLDeviceHelper.cpp  OpenGLDeviceHelper.h  OpenGLRenderingHelper.cpp  OpenGLRenderingHelper.h  OpenGLWindowHelper.cpp  OpenGLWindowHelper.h  RenderStateManager.cpp  RenderStateManager.h  RenderingManager.cpp  RenderingManager.h  (+10 more)
NexgenRedux-Shared/ECS/: ECSComponent.h  ECSEntity.cpp  ECSEntity.h  ECSEntityManager.cpp  ECSEntityManager.h  ECSRenderSystem.cpp  ECSRenderSystem.h  ECSTransformComponent.cpp  ECSTransformComponent.h
NexgenRedux-Shared/EntityEngine/: Fog.cpp  Fog.h  FontManager.cpp  FontManager.h  Lighting.cpp  Lighting.h  Node.cpp  Node.h  NodeManager.cpp  NodeManager.h  NodeSprite.cpp  NodeSprite.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PreLoader.cpp  PreLoader.h  Property.h  PropertyTransform.cpp  PropertyTransform.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Sprite.cpp  Sprite.h  SpriteNode.h  Text.cpp  Text.h
NexgenRedux-Shared/Media/: config.ini
NexgenRedux-Shared/Media/Default/: main.as  main.nxg  util.as  verdana.sfn
NexgenRedux-Shared/Media/MemTest/: main.as
NexgenRedux-Shared/Media/Shooter/: Main.as  main.as
NexgenRedux-Shared/Media/Shooter/Asset/images/backgrounds/: Thumbs.db
NexgenRedux-UWP/: .gitignore  NexgenRedux-UWP.pfx  NexgenRedux-UWP.vcxproj  NexgenRedux-UWP.vcxproj.filters  Package.appxmanifest  main.cpp  packages.config
Tools/: .gitignore
Tools/IcontoHeader/: IcontoHeader.sln
Tools/IcontoHeader/IcontoHeader/: IcontoHeader.csproj  Program.cs
Tools/InnoSetup/: NexgenRedux.iss
Win/: CMakeLists.txt  Nexgen.code-workspace  main.cpp
